# StructuredLightSimulation

./: CMakeLists.txt
include/: CameraSimulator.h  DepthImageGenerator.h  EmitterSimulator.h
src/: CameraSimulator.cpp  DepthImageGenerator.cpp  EmitterSimulator.cpp
